--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,18 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To inform users of our company.To let them make appointments or call us to schedule a photography session.</p>
+    <p>To inform users of our company.To let them make appointments or call us to schedule a rafting session.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Any type of person that like thier photo taken. Ages 18-65. Those that love pictures of anything!</p>
+    <p>Any type of person that is adventurous. Ages 18-65. Those that love the outdoor and love the thrill of anything!</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/logo.png" alt="Logo image" />
+    <img src="images/dryoarlogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
