--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,7 +19,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To inform users of our company.To let them make appointments or call us to schedule a rafting session.</p>
+    <p>To inform users of our company. To let them make appointments or call us to schedule a rafting session.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
@@ -41,8 +41,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://color.adobe.com/search?q=ember"
-      target="_blank">https://color.adobe.com/search?q=ember</a>
+    <a href="https://color.adobe.com/Dry%20Oars-color-theme-19333979"
+      target="_blank">https://color.adobe.com/Dry%20Oars-color-theme-19333979</a>
 
     <table class="colors">
       <tr>
@@ -53,10 +53,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#413D59]</td>
-        <td class="secondary">[#423A42]</td>
-        <td class="accent1">[#894B52]</td>
-        <td class="accent2">[#BF5A28]</td>
+        <td class="primary">[#78c5d7]</td>
+        <td class="secondary">[#134266]</td>
+        <td class="accent1">[#fce172]</td>
+        <td class="accent2">[#ffffff]</td>
       </tr>
     </table>
 
