--- a/wwr/Portfolio/site-plan.html
+++ b/wwr/Portfolio/site-plan.html
@@ -9,9 +9,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Porfolio Site Plan</h1>
+      <h2>Makayla Rockwood</h2>
+      <h2>WDD 130 - Section 04</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -20,11 +20,21 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>I am a graphic designer. I am constantly working on various projects both big and small. I
+        would love it if there was a platform I could create to show off this work in a clean and well
+        designed way. Not only does this allow me to show off my various types of commissions
+        and ideas I’ve done but also be able to advocate for myself in an artistic way that is all my
+        own.
+        There are various templates online that are used to easily make a portfolio. However with
+        this website it will be all my own which would then be a strong selling point to show off
+        that not only can I have work to show but have it be on my own personal platform. I ask
+        you, that when you look to hire somebody wouldn’t you like their portfolio to 100% reflect
+        who they are as an artist both with the website and the content within? That is my plan
+        going forward with this design and website. Thank you!</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>For my audience it will be towards anyone wanting to know more about me and what I do for a living. Specifically, I want to be able to generate future employment through this site. In order to do that I need my audience to be potential employers. The gender will be neutral and the age range can be 18 years or older. This is specific toward people that need or want graphic design, photography, and/or UI design work done.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -44,13 +54,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://color.adobe.com/Portfolio-Colors--color-theme-19521280/" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#748F84]</td><td class="secondary">[#C5D4D2]</td><td class="accent1">[#D7ECF5]</td><td class="accent2">[#ffffff]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -61,10 +71,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Poppins  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Source Sans 3  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
