--- a/wwr/Portfolio/site-plan.html
+++ b/wwr/Portfolio/site-plan.html
@@ -109,10 +109,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          UI/UX Design <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Graphic Design  <!-- change this -->
         </div>
 
         <div class="top">
