--- a/wwr/rafting/site-plan-rafting.html
+++ b/wwr/rafting/site-plan-rafting.html
@@ -121,6 +121,8 @@
 
     <h3>[Page 2]</h3>
 
+    <img src="https://byui-wdd.github.io/wdd130/rafting/images/WireframeRafting.png" alt="page 2 wireframe" />
+
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
