--- a/wwr/Portfolio/site-plan.html
+++ b/wwr/Portfolio/site-plan.html
@@ -109,10 +109,10 @@
           Home
         </div>
         <div class="sm-page2">
-          UI/UX Design <!-- change this -->
+          Graphic Design <!-- change this -->
         </div>
         <div class="sm-page3">
-          Graphic Design  <!-- change this -->
+          Photography  <!-- change this -->
         </div>
 
         <div class="top">
@@ -134,29 +134,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Homepage will cover my best work and links to the other pages for specific portfolio. Also want to include a button to my resume. This page will also focus on UI/UX Design.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/UIDesign.png" alt="image 01 homepage">
+        <img src="images/UXDesign.png" alt="image 02 homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Grahic Design</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This page will show off the differnet types of design work I have done. I want to be able to explain what experience I have and how long I have been doing it. SHowing off the process would aslo be an added plus to this design page.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/Advertise.png" alt="image 03 page2">
+        <img src="images/Advertise1.png" alt="image 04 page2">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Photography</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This page will show what type of photgraphy I do. This will show off a wide varity of projects and the different types of pictures.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Photography.png" alt="image 05 page3">
+        <img src="images/Photography1.png" alt="image 06 page3">
 
       </ul>
       <hr>
@@ -168,21 +168,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Want these boxes to be a collection of work that I have done.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/HomepageW.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Graphic Design</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        I want to show off different types of design work. Ill have them in sections so theyu are easliy distinguishable.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/GraphicDesignW.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Photography</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        For this I will have photo grids throughout the page.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/PhotographyW.png" alt="page 3 wireframe">
     </main>
   </body>
 
