--- a/wwr/rafting/site-plan-rafting.html
+++ b/wwr/rafting/site-plan-rafting.html
@@ -121,7 +121,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting/images/WireframeRafting.png" alt="page 2 wireframe" />
+    <img src="images/WireframeRafting.png" alt="page 2 wireframe" />
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
