--- a/wwr/rafting/rivers.html
+++ b/wwr/rafting/rivers.html
@@ -15,16 +15,16 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+    <div id="river">
+        <div id="river-box">
+            <img id="littlecolorado-wide" src="images/littlecolorado-wide.png" alt="People enjoying white water rafting">
         </div>
-        <section id="hero-msg">
+        <section id="river-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar </h4>
             <div class='button-box'>
