--- a/wwr/rafting/rivers.html
+++ b/wwr/rafting/rivers.html
@@ -20,11 +20,11 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <div id="river">
-        <div id="river-box">
-            <img id="littlecolorado-wide" src="images/littlecolorado-wide.png" alt="People enjoying white water rafting">
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
-        <section id="river-msg">
+        <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar </h4>
             <div class='button-box'>
