--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -21,28 +21,28 @@
     
       <div class="row"> 
         <div class="column">
-          <img src="IMG_2554 copy.jpg">
-          <img src="IMG_2560 copy.jpg">
-          <img src="IMG_2571 copy.jpg">
-          <img src="IMG_2572 copy.jpg">
+          <img src="2554.jpg">
+          <img src="2560.jpg">
+          <img src="2571.jpg">
+          <img src="2572.jpg">
         </div>
         <div class="column">
-            <img src="IMG_2554 copy.jpg">
-            <img src="IMG_2560 copy.jpg">
-            <img src="IMG_2571 copy.jpg">
-            <img src="IMG_2572 copy.jpg">
+            <img src="2554.jpg">
+            <img src="2560.jpg">
+            <img src="2571.jpg">
+            <img src="2572.jpg">
         </div> 
         <div class="column">
-            <img src="IMG_2554 copy.jpg">
-            <img src="IMG_2560 copy.jpg">
-            <img src="IMG_2571 copy.jpg">
-            <img src="IMG_2572 copy.jpg">
+            <img src="2554.jpg">
+            <img src="2560.jpg">
+            <img src="2571.jpg">
+            <img src="2572.jpg">
         </div>
         <div class="column">
-          <img src="IMG_2554 copy.jpg">
-          <img src="IMG_2560 copy.jpg">
-          <img src="IMG_2571 copy.jpg">
-          <img src="IMG_2572 copy.jpg">
+            <img src="2554.jpg">
+            <img src="2560.jpg">
+            <img src="2571.jpg">
+            <img src="2572.jpg">
         </div>
       </div>
  
