--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -21,28 +21,12 @@
     
       <div class="row"> 
         <div class="column">
-          <img src="2554.jpg">
-          <img src="2560.jpg">
-          <img src="2571.jpg">
-          <img src="2572.jpg">
-        </div>
-        <div class="column">
-            <img src="2554.jpg">
-            <img src="2560.jpg">
-            <img src="2571.jpg">
-            <img src="2572.jpg">
-        </div> 
-        <div class="column">
-            <img src="2554.jpg">
-            <img src="2560.jpg">
-            <img src="2571.jpg">
-            <img src="2572.jpg">
-        </div>
-        <div class="column">
-            <img src="2554.jpg">
-            <img src="2560.jpg">
-            <img src="2571.jpg">
-            <img src="2572.jpg">
+          <img src="images/2554.jpg">
+          <img src="images/2560.jpg">
+          <img src="images/2571.jpg">
+          <img src="images/2572.jpg">
+          <img src="images/2574.jpg">
+          <img src="images/2579.jpg">
         </div>
       </div>
  
