--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -28,5 +28,21 @@
           <img src="images/2574.jpg">
           <img src="images/2579.jpg">
         </div>
+        <div class="column">
+            <img src="images/2554.jpg">
+            <img src="images/2574.jpg">
+            <img src="images/2571.jpg">
+            <img src="images/2572.jpg">
+            <img src="images/2579.jpg">
+            <img src="images/2560.jpg">
+          </div>
+          <div class="column">
+            <img src="images/2571.jpg">
+            <img src="images/2560.jpg">
+            <img src="images/2579.jpg">
+            <img src="images/2572.jpg">
+            <img src="images/2554.jpg">
+            <img src="images/2574.jpg">
+          </div>
       </div>
- 
+    </div>
