--- a/wwr/Portfolio/index.html
+++ b/wwr/Portfolio/index.html
@@ -39,8 +39,23 @@
 		<h2>Project 4</h2>
 		<p>Image</p>
 	</section>
-	<footer>
-		<p>Footer Bar</p>
-	</footer>
+    <footer>
+        <h3>&copy; Makayla Rockwood 2022</h3>
+        <h3><a href="contactme.html">Contact Me</a></h3>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/icons-04.png" alt="fb icon">
+            </a>
+            <a href="https://www.linkedin.com/in/makayla-rockwood-163887142/" target="_blank">
+                <img src="images/icons-02.png" alt="linkedin icon">
+            </a>
+            <a href="https://instagram.com/kay_roxk" target="_blank">
+                <img src="images/icons-03.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
+    </div>
+</body>
+</html>
 </div>
 </div>
