--- a/wwr/Portfolio/graphicdesign.html
+++ b/wwr/Portfolio/graphicdesign.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio Homepage</title>
-        <link rel="stylesheet" href="styles/photography.css">
+        <link rel="stylesheet" href="styles/graphicdesign.css">
     </head>
 
 <div class="site">
@@ -18,31 +18,46 @@
 			<li class="nav__item">Photography</li>
 		</ul>
 	</nav>
-    
-      <div class="row"> 
+
+    <div class="hero">
+		<h1>Graphic Design</h1>
+	</div>
+
+    <div class="row">
         <div class="column">
-          <img src="images/2554.jpg">
-          <img src="images/2560.jpg">
-          <img src="images/2571.jpg">
-          <img src="images/2572.jpg">
-          <img src="images/2574.jpg">
-          <img src="images/2579.jpg">
+          <img src="images/brand.png" alt="Branding" style="width:100%">
         </div>
         <div class="column">
-            <img src="images/2554.jpg">
-            <img src="images/2574.jpg">
-            <img src="images/2571.jpg">
-            <img src="images/2572.jpg">
-            <img src="images/2579.jpg">
-            <img src="images/2560.jpg">
+          <img src="images/logo1.png" alt="Branding" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="images/logo2.png" alt="Branding" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="images/cover.png" alt="Branding" style="width:100%">
           </div>
           <div class="column">
-            <img src="images/2571.jpg">
-            <img src="images/2560.jpg">
-            <img src="images/2579.jpg">
-            <img src="images/2572.jpg">
-            <img src="images/2554.jpg">
-            <img src="images/2574.jpg">
+            <img src="images/logo3.png" alt="Branding" style="width:100%">
+          </div>
+          <div class="column">
+            <img src="images/poster.png" alt="Branding" style="width:100%">
           </div>
       </div>
+    </div>
+
+    <footer>
+        <h3>&copy; Makayla Rockwood 2022</h3>
+        <h3><a href="contactme.html">Contact Me</a></h3>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/icons-04.png" alt="fb icon">
+            </a>
+            <a href="https://www.linkedin.com/in/makayla-rockwood-163887142/" target="_blank">
+                <img src="images/icons-02.png" alt="linkedin icon">
+            </a>
+            <a href="https://instagram.com/kay_roxk" target="_blank">
+                <img src="images/icons-03.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
     </div>
