--- a/wwr/rafting/rivers.html
+++ b/wwr/rafting/rivers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/rivers.css">
 </head>
 <body>
     <div id="content">
@@ -25,10 +25,68 @@
             <img id="littlecolorado-img" src="images/littlecolorado.jpg" alt="People enjoying white water rafting">
         </div>
         <section id="littlecolorado-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
+            <h1 class="home-title">Rivers</h1>
+            <h4>See what rivers we adventure through.</h4>
         </section>
     </div>
+
+    <span></span>
+
+    <div id="utah">
+        <div id="utah-box">
+        <img id="utah-img" src="images/idaho.jpg" alt="People enjoying white water rafting in utah">
+        </div>
+        <section id="utah-msg">
+            <h1 class="img-title">Main Fork of the Salmon River, Idaho</h1>
+        </section>
+    </div>
+
+    <div id="utah-content">
+        <div id="utah-content-msg">
+            <h4>Nestled deep in the Frank Church Wilderness of No Return winds the Salmon river. The Salmon was given the nickname long ago as the River of No Return by the people living near it because of the number of folks that came to visit and fell so in love with the rugged beauty of the river that they never left.</h4>
+            <h4>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.</h4>
+            <h4>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</h4>   
+        </div>
+
+    </div>
+
+    <div id="utah">
+        <div id="utah-box">
+        <img id="utah-img" src="images/utah.jpg" alt="People enjoying white water rafting in utah">
+        </div>
+        <section id="utah-msg">
+            <h1 class="img-title">Desolation and Gray Canyon, Utah</h1>
+        </section>
+    </div>
+
+    <div id="utah-content">
+        <div id="utah-content-msg">
+            <h4>Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.</h4>
+            <h4>Desolation is rated a Class II/III and is usually done in 6 days.</h4>
+            <h4>Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.</h4>   
+        </div>
+
+    </div>
+
+    <div id="utah">
+        <div id="utah-box">
+        <img id="utah-img" src="images/arizona.jpg" alt="People enjoying white water rafting in utah">
+        </div>
+        <section id="utah-msg">
+            <h1 class="img-title">Grand Canyon, Arizona</h1>
+        </section>
+    </div>
+
+    <div id="utah-content">
+        <div id="utah-content-msg">
+            <h4>This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.</h4>
+            <h4>Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.</h4>
+            <h4>CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.</h4>   
+        </div>
+
+    </div>
+
+
     <footer>
         <h3>Dry Oar &copy; 2022 - Makayla Rockwood</h3>
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
