--- a/wwr/Portfolio/index.html
+++ b/wwr/Portfolio/index.html
@@ -13,9 +13,9 @@
 	<nav class="nav">
 		<div class="nav__title">Makayla Rockwood</div>
 		<ul class="nav__list">
-			<li class="nav__item">UI/UX Design</li>
-			<li class="nav__item">Graphic Design</li>
-			<li class="nav__item">Photography</li>
+			<li class="nav__item"><a href=“index.html”>UI/UX Design</a></li> 
+			<li class="nav__item"><a href=“graphicdesign.html”>Graphic Design</a></li>
+			<li class="nav__item"><a href=“photography.html”>Photography</a></li>
 		</ul>
 	</nav>
 	
