--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -13,9 +13,9 @@
 	<nav class="nav">
 		<div class="nav__title">Makayla Rockwood</div>
 		<ul class="nav__list">
-			<li class="nav__item">UI/UX Design</li>
-			<li class="nav__item">Graphic Design</li>
-			<li class="nav__item">Photography</li>
+			<li class="nav__item"><a href=index.html>UI/UX Design</a></li> 
+			<li class="nav__item"><a href=graphicdesign.html>Graphic Design</a></li>
+			<li class="nav__item"><a href=photography.html>Photography</a></li>
 		</ul>
 	</nav>
     
@@ -45,4 +45,19 @@
             <img src="images/2574.jpg">
           </div>
       </div>
+      <footer>
+        <h3>&copy; Makayla Rockwood 2022</h3>
+        <h3><a href="contactme.html">Contact Me</a></h3>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/icons-04.png" alt="fb icon">
+            </a>
+            <a href="https://www.linkedin.com/in/makayla-rockwood-163887142/" target="_blank">
+                <img src="images/icons-02.png" alt="linkedin icon">
+            </a>
+            <a href="https://instagram.com/kay_roxk" target="_blank">
+                <img src="images/icons-03.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
     </div>
