--- a/wwr/Portfolio/index.html
+++ b/wwr/Portfolio/index.html
@@ -11,18 +11,28 @@
 <div class="site">
 	
 	<nav class="nav">
-		<div class="nav__title">Makayla Rockwood</div>
+		<a id="logo_link" href="index.html">
+			<img class="logo" src="images/mainlogo.png" alt="My Logo">
+		</a>
 		<ul class="nav__list">
 			<li class="nav__item"><a href=index.html>UI/UX Design</a></li> 
 			<li class="nav__item"><a href=graphicdesign.html>Graphic Design</a></li>
 			<li class="nav__item"><a href=photography.html>Photography</a></li>
 		</ul>
 	</nav>
-	
-	<div class="hero">
-		<h1>A bit about me and my resume button.</h1>
+<body>
+	<div class="try this">
+		<a id="line_overlay">
+			<img class="line" src="images/line.png" alt="Line this">
+		</a>
 	</div>
 	
+	<div class="hero">
+		<h1>Hi, my name is Makayla Rockwood.</h1>
+		<h2>I'm a UI/UX designer based in the North American Pacific Northwest.</h2>
+		<button class="btn resume">Resume</button>
+	</div>
+
 	<section class="section">
 		<h2>Project 1</h2>
 		<p>Image</p>
@@ -38,7 +48,12 @@
 	<section class="section">
 		<h2>Project 4</h2>
 		<p>Image</p>
-	</section>
+
+</body>
+	
+
+</section>
+
     <footer>
         <h3>&copy; Makayla Rockwood 2022</h3>
         <h3><a href="contactme.html">Contact Me</a></h3>
