--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -32,12 +32,12 @@
     
       <div class="row"> 
         <div class="column">
-          <img src="images/2554.jpg">
-          <img src="images/2571.jpg">
-          <img src="images/2574.jpg">
-          <img src="images/2579.jpg">
-          <img src="images/2560.jpg">
-          <img src="images/2572.jpg">
+          <img src="images/2554.jpg" alt="yellowstone">
+          <img src="images/2571.jpg" alt="yellowstone">
+          <img src="images/2574.jpg" alt="yellowstone">
+          <img src="images/2579.jpg" alt="yellowstone">
+          <img src="images/2560.jpg" alt="yellowstone">
+          <img src="images/2572.jpg" alt="yellowstone">
         </div>
       </div>
 
@@ -48,17 +48,17 @@
 
     <div class="row"> 
         <div class="column">
-          <img src="images/e1.png">
-          <img src="images/e7.png">
-          <img src="images/e9.png">
-          <img src="images/e4.png">
-          <img src="images/e5.png">
-          <img src="images/e6.png">
-          <img src="images/e3.png">
-          <img src="images/e8.png">
-          <img src="images/e10.png">
-          <img src="images/e13.png">
-          <img src="images/e12.png">
+          <img src="images/e1.png" alt="Environmental">
+          <img src="images/e7.png" alt="Environmental">
+          <img src="images/e9.png" alt="Environmental">
+          <img src="images/e4.png" alt="Environmental">
+          <img src="images/e5.png" alt="Environmental">
+          <img src="images/e6.png" alt="Environmental">
+          <img src="images/e3.png" alt="Environmental">
+          <img src="images/e8.png" alt="Environmental">
+          <img src="images/e10.png" alt="Environmental">
+          <img src="images/e13.png" alt="Environmental">
+          <img src="images/e12.png" alt="Environmental">
         </div>
       </div>
 
@@ -69,13 +69,13 @@
 
     <div class="row"> 
         <div class="column">
-          <img src="images/h1.png">
-          <img src="images/h2.png">
-          <img src="images/h3.png">
-          <img src="images/h4.png">
-          <img src="images/h5.png">
-          <img src="images/h6.png">
-          <img src="images/h7.png">
+          <img src="images/h1.png" alt="Hospital">
+          <img src="images/h2.png" alt="Hospital">
+          <img src="images/h3.png" alt="Hospital">
+          <img src="images/h4.png" alt="Hospital">
+          <img src="images/h5.png" alt="Hospital">
+          <img src="images/h6.png" alt="Hospital">
+          <img src="images/h7.png" alt="Hospital">
         </div>
       </div>
 
@@ -86,16 +86,16 @@
 
     <div class="row"> 
         <div class="column">
-          <img src="images/p1.png">
-          <img src="images/p2.png">
-          <img src="images/p3.png">
-          <img src="images/p4.png">
-          <img src="images/p5.png">
-          <img src="images/p6.png">
-          <img src="images/p7.png">
-          <img src="images/p8.png">
-          <img src="images/p9.png">
-          <img src="images/p10.png">
+          <img src="images/p1.png" alt="Portraits">
+          <img src="images/p2.png" alt="Portraits">
+          <img src="images/p3.png" alt="Portraits">
+          <img src="images/p4.png" alt="Portraits">
+          <img src="images/p5.png" alt="Portraits">
+          <img src="images/p6.png" alt="Portraits">
+          <img src="images/p7.png" alt="Portraits">
+          <img src="images/p8.png" alt="Portraits">
+          <img src="images/p9.png" alt="Portraits">
+          <img src="images/p10.png" alt="Portraits">
         </div>
       </div>
 
