--- a/wwr/Portfolio/index.html
+++ b/wwr/Portfolio/index.html
@@ -30,7 +30,7 @@
 	<div class="hero">
 		<h1>Hi, my name is Makayla Rockwood.</h1>
 		<h2>I'm a UI/UX designer based in the North American Pacific Northwest.</h2>
-		<button class="btn resume">Resume</button>
+		<button class="btn resume" onclick="location.href='images/resume.pdf';">Resume</button> 
 	</div>
 
 	<div id="demobox">
