--- a/wwr/Portfolio/photography.html
+++ b/wwr/Portfolio/photography.html
@@ -64,7 +64,7 @@
 
       <div class="title">
 		<h1>Abandoned Hospital</h1>
-        <p>Project taking photos of an abondoned hopital in St Anthony, Idaho for their Airbnb.</p>
+        <p>Project taking photos of an abondoned hospital in St Anthony, Idaho for their Airbnb.</p>
 	</div>
 
     <div class="row"> 
@@ -81,7 +81,7 @@
 
       <div class="title">
 		<h1>Portraits</h1>
-        <p>Portriat style images that have been taken over the years as a photographer.</p>
+        <p>Portrait style images that have been taken over the years as a photographer.</p>
 	</div>
 
     <div class="row"> 
